--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -46,6 +46,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
+            <th scope="col">Edit</th>
           </tr>
         </thead>
         <tbody>
@@ -53,8 +55,17 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td>
+                <form method="POST" action="/urls/<%= id %>/delete">
+                  <button>delete</button>
+                </form>
+              </td>
+              <td>
+                <form method="POST" action="/urls/<%= id %>/edit">
+                  <button>edit</button>
+                </form>
+              </td>
             </tr>
-          
           <% } %>
         </tbody>
       </table>
