--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -41,6 +41,16 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
+          <h3 for="longURL">Edit</h3>
+
+          <input
+            class="form-control"
+            type="text"
+            name="longURL"
+            placeholder="http://<%= longURL %>"
+            style="width: 300px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Submit</button>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
