add edit button

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -61,7 +61,7 @@
                 </form>
               </td>
               <td>
-                <form method="POST" action="/urls/<%= id %>/edit">
+                <form method="GET" action="/urls/<%= id %>">
                   <button>edit</button>
                 </form>
               </td>
