--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,5 @@
 <header>
+
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button
@@ -18,5 +19,14 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form method="POST" action="/login">
+      <input
+      class="form-control"
+      type="text"
+      name="username"
+      style="width: 300px; margin: 1em;"
+    />
+      <button>login</button>
+    </form>
   </nav>
 </header>
