--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,5 +8,8 @@
 </head>
 <body>
   your logged in 👍
+  <form method="POST" action="/urls">
+    <button>back to main</button>
+  </form>
 </body>
 </html>
