--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,7 @@
 <header>
-
+  <% if (username) { %>
+    <h1>Welcome, <%= username %></h1>
+  <% } %>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button
