--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,7 @@
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
           <h3 for="longURL">Edit</h3>
-    <div style="display: block;" class="form-inline"> 
+    <form style="display: block;" class="form-inline" action="/urls/<%= id %>" method="post"> 
           <input
             class="form-control"
             type="text"
@@ -29,8 +29,9 @@
             value="<%= longURL %>"
             style="width: 300px; margin: 1em;"
           />
-        </div>
           <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+         
       </div>
       <div class="card-footer text-muted"></div>
     </div>
