--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,4 @@
 <header>
-
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button
@@ -28,6 +27,9 @@
       <form method="POST" action="/login">
         <input class="form-control" type="text" name="username" style="width: 300px; margin: 1em;" />
         <button type="submit">Login</button>
+      </form>
+      <form method="GET" action="/register">
+        <button type="submit">Sign up</button>
       </form>
     <% } %>
     
