--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,14 +18,13 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (username) { %>
-      <h2>Logged in as: <%= username %>!</h2>
+    <% if (user) { %>
+      <h2>Logged in as: <%= user.email %>!</h2>
       <form method="POST" action="/logout">
         <button type="submit">Logout</button>
       </form>
     <% } else { %>
       <form method="POST" action="/login">
-        <input class="form-control" type="text" name="username" style="width: 300px; margin: 1em;" />
         <button type="submit">Login</button>
       </form>
       <form method="GET" action="/register">
