--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -25,7 +25,7 @@
       </form>
     <% } else { %>
       <form method="POST" action="/login">
-        <button type="submit">Login</button>
+        <a href="/login"><button type="button">Login</button></a>
       </form>
       <form method="GET" action="/register">
         <button type="submit">Sign up</button>
