--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,20 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page</title>
+  <title>login</title>
 </head>
 <body>
-  <h2>Login Here!!</h2>
+  <h1>Login here!!</h1>
   <form method="POST" action="/login">
-<label>Email:</label>
-<input name="email"/>
-<br/>
-<label>Password:</label>
-<input name="password" type="password"/>
-<br/>
-<button type="submit">Login!</button>
+    <label for="email">Email:</label>
+    <input type="email" name="email" id="email" required>
+    <br>
+    <label for="password">Password:</label>
+    <input type="password" name="password" id="password" required>
+    <br>
+    <button type="submit">Login!</button>
   </form>
 </body>
 </html>
