--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,6 +31,9 @@
     <br>
     <button type="submit">Login!</button>
   </form>
+  <form method="POST" action="/register">
+    <a href="/register">Sign up!</a>
+  </form>
 </body>
 </html>
 
