--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,8 +10,15 @@
 </head>
 
 <body>
+  
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
+    <form method="POST" action="/login">
+      <a href="/login"><button type="button">Login</button></a>
+    </form>
+    <form method="GET" action="/register">
+      <button type="submit">Sign up</button>
+    </form>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
