sytling and updating readme

--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -16,6 +16,46 @@
     />
 
     <title>New URL - TinyApp Example</title>
+    <style>
+      a {
+        font-weight: bold;
+      }
+      button {
+  background-color: #3366CC;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+      /* Center the form */
+      main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 1em;
+      }
+    
+      /* Style the form elements */
+      .form-inline {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+    
+      .form-control {
+        width: 100%;
+        margin: 10px 0;
+      }
+    
+      /* Style the Submit button */
+      .btn-primary {
+        width: 100%;
+      }
+      button:hover {
+  background-color: #c82333;
+}
+    </style>
+    
   </head>
 
   <body>
