--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,6 +9,39 @@
       crossorigin="anonymous"
     />
     <title>URL - TinyApp Example</title>
+    <style>
+      a {
+        font-weight: bold;
+      }
+      button {
+  background-color: #3366CC;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+      /* Center the form */
+      .card {
+        margin: 0 auto;
+        width: 80%;
+        max-width: 400px;
+        padding: 20px;
+      }
+  
+      /* Style the form elements */
+      .form-control {
+        width: 100%;
+        margin: 10px 0;
+      }
+  
+      /* Style the Submit button */
+      .btn-primary {
+        width: 100%;
+      }
+      button:hover {
+  background-color: #c82333;
+}
+    </style>
   </head>
 
   <body>
@@ -26,6 +59,7 @@
             class="form-control"
             type="text"
             name="longURL"
+            placeholder="http://"
             value="<%= longURL %>"
             style="width: 300px; margin: 1em;"
           />
